force-app/main/default/objects/Setting1__c/Setting1__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>カスタム設定１</label>
</CustomObject>