force-app/main/default/objects/Setting1__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>設定項目１</label>
    <length>255</length>
    <type>Text</type>
</CustomField>