force-app/main/default/objects/Setting1__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>設定項目２up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>