force-app/main/default/objects/Setting1__c/fields/PipelineCustomSet__c.field-meta.xml
<CustomField>
    <fullName>PipelineCustomSet__c</fullName>
    <description>PipeLineTest</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PipelineCustomSettings</label>
    <length>80</length>
    <type>Text</type>
</CustomField>